<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingVertical="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:id="@+id/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/firstHintText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintLeft_toRightOf="@id/hint_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/getHintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_hint"
            android:layout_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/hangmanImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/hang0"
        app:layout_constraintTop_toBottomOf="@+id/hintLayout"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/gameLostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-45"
        android:text="@string/lost"
        android:textColor="#BB4444"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/hangmanImage"
        app:layout_constraintEnd_toEndOf="@id/hangmanImage"
        app:layout_constraintStart_toStartOf="@id/hangmanImage"
        app:layout_constraintTop_toTopOf="@id/hangmanImage" />

    <TextView
        android:id="@+id/gameWonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-45"
        android:text="@string/won"
        android:textColor="#44BB44"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/hangmanImage"
        app:layout_constraintEnd_toEndOf="@id/hangmanImage"
        app:layout_constraintStart_toStartOf="@id/hangmanImage"
        app:layout_constraintTop_toTopOf="@id/hangmanImage"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/hangmanImage"
        tools:text="_ _ _ _ _ _ _ _ _" />
    <TextView
        android:id="@+id/chooseLetterTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_letter"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/answerTextView"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lettersLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintTop_toBottomOf="@id/chooseLetterTextView">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            app:constraint_referenced_ids="a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z"
            app:flow_wrapMode="aligned"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="A"
            android:textColor="@color/white"
            android:textSize="24dp"

            />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="B"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="C"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="D"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="E"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="F"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="G"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="H"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="I"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="J"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="K"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="L"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="M"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="N"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="O"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="P"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="Q"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="R"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="S"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="T"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="U"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="V"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="W"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="X"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="Y"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/letter_button"
            android:paddingHorizontal="10dp"
            android:text="Z"
            android:textColor="@color/white"
            android:textSize="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/start_new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>